# TaskScheduler

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
lib/: CMakeLists.txt
lib/include/: any_type.h  task_scheduler.h  task_types.h
tests/: CMakeLists.txt  scheduler_tests.cpp
